// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<BulletText /> > should match snapshot for custom bullet text 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <div
    class="sprinkles_alignItems_center_mobile__onxwjuvd sprinkles_display_flex_mobile__onxwjuf5 sprinkles_flexDirection_row_mobile__onxwjuyd sprinkles_flexWrap_nowrap_mobile__onxwjuzh sprinkles_gap_3_mobile__onxwjuqx sprinkles_justifyContent_start_mobile__onxwjuxl"
  >
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_position_relative_mobile__onxwjuh1 sprinkles_flexShrink_0_mobile__onxwjuz9"
    >
      <span>
        <span
          class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  sprinkles_display_block_mobile__onxwjuex"
          data-od-component="icon"
        >
          <svg
            aria-hidden="true"
            class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwjuex sprinkles_width_full_mobile__onxwjupp sprinkles_height_full_mobile__onxwjuo5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 256 256"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M229.66 77.66l-128 128a8 8 0 0 1-11.32 0l-56-56a8 8 0 0 1 11.32-11.32L96 188.69 218.34 66.34a8 8 0 0 1 11.32 11.32z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_flexGrow_1_mobile__onxwjuz1"
    >
      <span
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  typography_common__yhjp33f sprinkles_fontSize_4_mobile__onxwjuit sprinkles_lineHeight_4_mobile__onxwjuht sprinkles_fontWeight_normal__onxwjue4 typography_color_neutral__yhjp338 sprinkles_display_block_mobile__onxwjuex"
      >
        Hello World
      </span>
    </div>
  </div>
</div>
`;

exports[`<BulletText /> > should match snapshot for default bullet text 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <div
    class="sprinkles_alignItems_center_mobile__onxwjuvd sprinkles_display_flex_mobile__onxwjuf5 sprinkles_flexDirection_row_mobile__onxwjuyd sprinkles_flexWrap_nowrap_mobile__onxwjuzh sprinkles_gap_3_mobile__onxwjuqx sprinkles_justifyContent_start_mobile__onxwjuxl"
  >
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_position_relative_mobile__onxwjuh1 sprinkles_borderRadius_pill_mobile__onxwjukt sprinkles_alignItems_center_mobile__onxwjuvd sprinkles_flexShrink_0_mobile__onxwjuz9 sprinkles_justifyContent_center_mobile__onxwjux1 BulletText_bullet__1o8gcm90 BulletText_primary__1o8gcm91"
    >
      <span
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  typography_common__yhjp33f sprinkles_fontSize_2_mobile__onxwjuil sprinkles_lineHeight_2_mobile__onxwjuhl sprinkles_fontWeight_normal__onxwjue4 typography_color_neutral__yhjp338 BulletText_primaryText__1o8gcm93"
      >
        •
      </span>
    </div>
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_flexGrow_1_mobile__onxwjuz1"
    >
      <span
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  typography_common__yhjp33f sprinkles_fontSize_4_mobile__onxwjuit sprinkles_lineHeight_4_mobile__onxwjuht sprinkles_fontWeight_normal__onxwjue4 typography_color_neutral__yhjp338 sprinkles_display_block_mobile__onxwjuex"
      >
        Hello World!
      </span>
    </div>
  </div>
</div>
`;

exports[`<BulletText /> > should match snapshot for ordered bullet text 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <div
    class="sprinkles_alignItems_center_mobile__onxwjuvd sprinkles_display_flex_mobile__onxwjuf5 sprinkles_flexDirection_row_mobile__onxwjuyd sprinkles_flexWrap_nowrap_mobile__onxwjuzh sprinkles_gap_3_mobile__onxwjuqx sprinkles_justifyContent_start_mobile__onxwjuxl"
  >
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_position_relative_mobile__onxwjuh1 sprinkles_borderRadius_pill_mobile__onxwjukt sprinkles_alignItems_center_mobile__onxwjuvd sprinkles_flexShrink_0_mobile__onxwjuz9 sprinkles_justifyContent_center_mobile__onxwjux1 BulletText_bullet__1o8gcm90 BulletText_primary__1o8gcm91"
    >
      <span
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  typography_common__yhjp33f sprinkles_fontSize_2_mobile__onxwjuil sprinkles_lineHeight_2_mobile__onxwjuhl sprinkles_fontWeight_normal__onxwjue4 typography_color_neutral__yhjp338 BulletText_primaryText__1o8gcm93"
      >
        ?
      </span>
    </div>
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_flexGrow_1_mobile__onxwjuz1"
    >
      <span
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  typography_common__yhjp33f sprinkles_fontSize_4_mobile__onxwjuit sprinkles_lineHeight_4_mobile__onxwjuht sprinkles_fontWeight_normal__onxwjue4 typography_color_neutral__yhjp338 sprinkles_display_block_mobile__onxwjuex"
      >
        Hello World!
      </span>
    </div>
  </div>
</div>
`;

exports[`<BulletText /> > should match snapshot for primary bullet text with custom bullet character 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <div
    class="sprinkles_alignItems_center_mobile__onxwjuvd sprinkles_display_flex_mobile__onxwjuf5 sprinkles_flexDirection_row_mobile__onxwjuyd sprinkles_flexWrap_nowrap_mobile__onxwjuzh sprinkles_gap_3_mobile__onxwjuqx sprinkles_justifyContent_start_mobile__onxwjuxl"
  >
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_position_relative_mobile__onxwjuh1 sprinkles_borderRadius_pill_mobile__onxwjukt sprinkles_alignItems_center_mobile__onxwjuvd sprinkles_flexShrink_0_mobile__onxwjuz9 sprinkles_justifyContent_center_mobile__onxwjux1 BulletText_bullet__1o8gcm90 BulletText_primary__1o8gcm91"
    >
      <span
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  typography_common__yhjp33f sprinkles_fontSize_2_mobile__onxwjuil sprinkles_lineHeight_2_mobile__onxwjuhl sprinkles_fontWeight_normal__onxwjue4 typography_color_neutral__yhjp338 BulletText_primaryText__1o8gcm93"
      >
        ?
      </span>
    </div>
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_flexGrow_1_mobile__onxwjuz1"
    >
      <span
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  typography_common__yhjp33f sprinkles_fontSize_4_mobile__onxwjuit sprinkles_lineHeight_4_mobile__onxwjuht sprinkles_fontWeight_normal__onxwjue4 typography_color_neutral__yhjp338 sprinkles_display_block_mobile__onxwjuex"
      >
        Hello World!
      </span>
    </div>
  </div>
</div>
`;

exports[`<BulletText /> > should match snapshot for secondary bullet text with custom bullet character 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <div
    class="sprinkles_alignItems_center_mobile__onxwjuvd sprinkles_display_flex_mobile__onxwjuf5 sprinkles_flexDirection_row_mobile__onxwjuyd sprinkles_flexWrap_nowrap_mobile__onxwjuzh sprinkles_gap_3_mobile__onxwjuqx sprinkles_justifyContent_start_mobile__onxwjuxl"
  >
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_flex_mobile__onxwjuf5 sprinkles_position_relative_mobile__onxwjuh1 sprinkles_borderRadius_pill_mobile__onxwjukt sprinkles_alignItems_center_mobile__onxwjuvd sprinkles_flexShrink_0_mobile__onxwjuz9 sprinkles_justifyContent_center_mobile__onxwjux1 BulletText_bullet__1o8gcm90 BulletText_secondary__1o8gcm92"
    >
      <span
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  typography_common__yhjp33f sprinkles_fontSize_2_mobile__onxwjuil sprinkles_lineHeight_2_mobile__onxwjuhl sprinkles_fontWeight_normal__onxwjue4 typography_color_neutral__yhjp338 BulletText_secondaryText__1o8gcm94"
      >
        ?
      </span>
    </div>
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_flexGrow_1_mobile__onxwjuz1"
    >
      <span
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  typography_common__yhjp33f sprinkles_fontSize_4_mobile__onxwjuit sprinkles_lineHeight_4_mobile__onxwjuht sprinkles_fontWeight_normal__onxwjue4 typography_color_neutral__yhjp338 sprinkles_display_block_mobile__onxwjuex"
      >
        Hello World!
      </span>
    </div>
  </div>
</div>
`;
